--- a/24001182-km7-nai-bcr-ch1/style.css
+++ b/24001182-km7-nai-bcr-ch1/style.css
@@ -26,12 +26,16 @@ body {
     align-items: center;
 }
 
-/* .d-flex {
-    display:flex;
-    flex-direction: row-reverse;
-} */
-
 .col-lg-6 d-flex flex-column py-auto {
     display:flex;
     align-items: center;
+}
+
+.centang{
+    margin-left: 1rem;
+    margin-top: 0,5rem;
+}
+
+.judul{
+    margin-top: 1rem;
 }
